--- a/pages/index/index.less
+++ b/pages/index/index.less
@@ -1,5 +1,10 @@
 .project {
   .section {
+    &:nth-child(1) {
+      background-size: contain;
+      background-repeat: no-repeat;
+      background-position: right;
+    }
     &:nth-child(odd) {
       background-color: #fff;
     }
@@ -31,8 +36,7 @@
 
       .img {
         margin-left: 44px;
-        width: 256px;
-        height: 210px;
+        height: 300px;
       }
 
       .intro {
@@ -44,13 +48,17 @@
         letter-spacing: 0px;
 
         .title {
-          font-size: 27px;
+          font-size: 37px;
           color: #303133;
         }
-
+        .slogen {
+          font-size: 20px;
+          color: #8c8c8c;
+          margin: 22px 0;
+        }
         .info {
           height: 72px;
-          font-size: 13px;
+          font-size: 16px;
           color: #727485;
           overflow: hidden;
           text-overflow: ellipsis;
