--- a/pages/index/index.less
+++ b/pages/index/index.less
@@ -104,24 +104,31 @@
       padding: 0 20px;
 
       ::v-deep .el-card {
-        height: 200px;
+       
         border: none;
         &__header {
           border: none;
         }
       }
-
+      img {
+        margin: 30px 0;
+        height: 256px;
+      }
       .card-header {
         display: flex;
         align-items: center;
         justify-content: center;
         font-size: 24px;
-        font-weight: bold;
       }
 
       .card-item {
         min-height: 50px;
         color: #8c8c8c;
+      }
+      .language-go {
+        font-size: 16px;
+        border: 2px solid lightblue;
+        border-radius: 2%;
       }
     }
   }
