--- a/pages/index/index.less
+++ b/pages/index/index.less
@@ -113,7 +113,7 @@
       }
 
       img {
-        margin: 30px 0;
+        margin: 10px 0;
         height: 256px;
       }
 
@@ -122,8 +122,30 @@
         align-items: center;
         justify-content: center;
         font-size: 24px;
+        .card-item {
+          font-size: 14px;
+          margin-top: 20px;
+        }
       }
-
+      .card-header.go {
+        margin: 0px 20px 0 20px;
+        border-radius: 2%;
+        position: relative;
+        font-size: 16px;
+        box-shadow: 0 5px 10px -5px black;
+        pre {
+          height: 300px;
+          overflow: hidden;
+        }
+        .language-go{
+          padding: 0;
+        }
+        svg {
+          position: absolute;
+          top: 10px;
+          left: 10px;
+        }
+      }
       .card-item {
         min-height: 50px;
         color: #8c8c8c;
@@ -178,11 +200,7 @@
         }
       }
 
-      .language-go {
-        font-size: 16px;
-        border: 2px solid lightblue;
-        border-radius: 2%;
-      }
+     
     }
   }
 }
