使用全新主题色

--- a/pages/index/index.less
+++ b/pages/index/index.less
@@ -79,7 +79,7 @@
             width: 96px;
             height: 32px;
             line-height: 32px;
-            background-color: #456fff;
+            background-color: #E86024;
             border-radius: 16px;
             font-family: MicrosoftYaHei;
             font-size: 14px;
@@ -89,11 +89,11 @@
             box-shadow: 0 5px 4px -1px rgba(69, 111, 255, 0.44);
 
             &:hover {
-              background-color: #688aff;
+              background-color: #E8B424;
             }
 
             &:active {
-              background-color: #688aff;
+              background-color: #E86024;
             }
           }
         }
@@ -172,11 +172,11 @@
           }
 
           .windows {
-            background-color: #0066aa;
+            background-color: #5824E8;
 
             &:hover {
-              background-color: #f2f2f2;
-              color: #0066aa;
+              background-color: #E8B424;
+              color: #5824E8;
             }
           }
 
@@ -184,17 +184,17 @@
             background-color: #a9a9a9;
 
             &:hover {
-              background-color: #f2f2f2;
+              background-color: #E8B424;
               color: #a9a9a9;
             }
           }
 
           .linux {
-            background-color: #ee4433;
+            background-color: #E86024;
 
             &:hover {
-              background-color: #f2f2f2;
-              color: #ee4433;
+              background-color: #E8B424;
+              color: #E86024;
             }
           }
         }
