--- a/pages/index/index.less
+++ b/pages/index/index.less
@@ -11,20 +11,21 @@
       align-items: center;
 
       .img {
-        margin-left: 35px;
-        width: 612px;
+        // margin-left: 35px;
+        // width: 612px;
         height: 269px;
       }
 
       .intro {
+        // width: 525px;
         .h2 {
-          font-size: 16px;
+          font-size: 26px;
           font-weight: 400;
           color: #E89424;
         }
 
         .h3 {
-          font-size: 15px;
+          font-size: 24px;
           font-weight: 400;
           color: #707070;
         }
