--- a/pages/index/index.less
+++ b/pages/index/index.less
@@ -1,7 +1,6 @@
-.project {
-  color: #1c295d;
-  padding: 0 150px;
-  margin-top: 60px;
+.main {
+  padding: 0 360px;
+  margin-top: 104px;
 
   .section {
     .container {
@@ -11,17 +10,14 @@
       align-items: center;
 
       .img {
-        // margin-left: 35px;
-        // width: 612px;
         height: 269px;
       }
 
       .intro {
-        // width: 525px;
         .h2 {
           font-size: 26px;
           font-weight: 400;
-          color: #E89424;
+          color: #e89424;
         }
 
         .h3 {
@@ -33,83 +29,19 @@
     }
 
     .more {
-      margin-top: 100px;
+      margin-top: 138px;
+      margin-bottom: 81px;
       width: 100%;
+      display: flex;
+      justify-content: space-between;
 
-      // padding: 0 20px;
-      ::v-deep .el-card {
-        border: none;
-
-        &__header {
-          border: none;
-        }
-      }
-
-      img {
-        margin: 10px 0;
-        height: 256px;
-      }
-
-      .mh {
-        // min-height: 400px;
-      }
-
-      .card {
+      .item {
+        width: 30%;
         position: relative;
-        min-height: 440px;
+        min-height: 400px;
       }
 
-      .card-header {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-size: 24px;
-        color: #707070;
-
-        .card-item {
-          font-size: 14px;
-          margin-top: 20px;
-          width: 320px;
-        }
-      }
-
-      .bottom {
-        position: absolute;
-        bottom: 0;
-
-        .title {
-          text-align: center;
-          font-size: 26px;
-          font-weight: bold;
-          color: #707070;
-        }
-      }
-
-      .card-header.go {
-        border-radius: 2%;
-        position: relative;
-        font-size: 12px;
-        box-shadow: 0 5px 10px -5px black;
-
-        pre {
-          height: 300px;
-          overflow: hidden;
-        }
-
-        .language-go {
-          padding: 0;
-        }
-
-        svg {
-          position: absolute;
-          top: 10px;
-          left: 10px;
-        }
-      }
-
-      .card-item {
-        min-height: 50px;
-        color: #707070;
+      .header {
         .download {
           display: flex;
           height: 200px;
@@ -118,7 +50,7 @@
           color: #fff;
 
           .download-item {
-            padding: 20px 55px;
+            padding: 20px 0px;
             border-radius: 2px;
             cursor: pointer;
             display: flex;
@@ -132,11 +64,11 @@
           }
 
           .windows {
-            background-color: #5824E8;
+            background-color: #0066aa;
 
             &:hover {
-              background-color: #E8B424;
-              color: #5824E8;
+              background-color: #f2f2f2;
+              color: #0066aa;
             }
           }
 
@@ -144,19 +76,77 @@
             background-color: #a9a9a9;
 
             &:hover {
-              background-color: #E8B424;
+              background-color: #f2f2f2;
               color: #a9a9a9;
             }
           }
 
           .linux {
-            background-color: #E86024;
+            background-color: #ee4433;
 
             &:hover {
-              background-color: #E8B424;
-              color: #E86024;
+              background-color: #f2f2f2;
+              color: #ee4433;
             }
           }
+        }
+
+        .download-desc {
+          margin-top: 8px;
+          color: #707070;
+        }
+      }
+
+      .go {
+        border-radius: 2%;
+        position: relative;
+        font-size: 12px;
+        box-shadow: 0 5px 10px -5px black;
+
+        .language-go {
+          padding: 0;
+        }
+
+        border-radius: 2%;
+        position: relative;
+        font-size: 12px;
+        box-shadow: 0 5px 10px -5px black;
+
+        pre {
+          height: 300px;
+          overflow: hidden;
+        }
+
+        .language-go {
+          padding: 10px;
+        }
+
+        svg {
+          position: absolute;
+          top: 10px;
+          left: 10px;
+        }
+      }
+
+      .bottom {
+        position: absolute;
+        bottom: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+
+        .title {
+          text-align: center;
+          font-size: 26px;
+          height: 37px;
+          font-weight: bold;
+          color: #707070;
+        }
+
+        .desc {
+          margin-top: 8px;
+          color: #707070;
         }
       }
     }
