--- a/pages/index/index.less
+++ b/pages/index/index.less
@@ -1,5 +1,5 @@
 .main {
-  padding: 0 360px;
+  padding: 0 260px;
   margin-top: 104px;
 
   .section {
@@ -17,13 +17,18 @@
         .h2 {
           font-size: 26px;
           font-weight: 400;
-          color: #e89424;
+          color: #707070;
+          .enhance {
+            font-size: 40px;
+            color: #E86024;
+            font-weight: bold;
+          }
         }
 
         .h3 {
-          font-size: 24px;
+          font-size: 28px;
           font-weight: 400;
-          color: #707070;
+          color: #282828;
         }
       }
     }
