--- a/components/footer/index.less
+++ b/components/footer/index.less
@@ -1,14 +1,13 @@
 .footer {
-  background: #ffe9e0;
   line-height: 32px;
   color: #707070;
   justify-content: space-between;
   align-items: flex-start;
   flex-wrap: nowrap;
   display: flex;
-  padding: 18px 144px;
-  min-height: 200px;
-  // background: #111827;
+  padding: 40px 144px;
+  // min-height: 200px;
+  background: #282828;
   position: relative;
 
   .left {
@@ -22,7 +21,7 @@
 
     .title {
       font-size: 18px;
-      color: #222;
+      color: #999;
       font-size: 18px;
       padding-bottom: 10px;
       height: 25px;
