--- a/components/head/index.less
+++ b/components/head/index.less
@@ -33,20 +33,21 @@
         color: #FFE300;
         background: #282828;
 
-        > .el-icon-arrow-down {
-          transform: rotate(-180deg);
-          transform-origin: center;
-          transition: all 0.2s ease 0s;
-        }
+        // > .el-icon-arrow-down {
+        //   transform: rotate(-180deg);
+        //   transform-origin: center;
+        //   transition: all 0.2s ease 0s;
+        // }
       }
 
-      > .el-icon-arrow-down {
-        margin-left: 5px;
-      }
+      // > .el-icon-arrow-down {
+      //   margin-left: 5px;
+      // }
       .nav-sheet-container {
         display: none;
         position: absolute;
         left: 0;
+        top: 56px;
         width: max-content;
         width: 100%;
         .nav-sheet-items {
