fix: 优化顶部导航hover样式闪动和不流畅问题

--- a/components/head/index.less
+++ b/components/head/index.less
@@ -32,22 +32,16 @@
         cursor: pointer;
         color: #FFE300;
         background: #282828;
-
-        // > .el-icon-arrow-down {
-        //   transform: rotate(-180deg);
-        //   transform-origin: center;
-        //   transition: all 0.2s ease 0s;
-        // }
+        .nav-sheet-container {
+          display: block !important;
+        }
       }
-
-      // > .el-icon-arrow-down {
-      //   margin-left: 5px;
-      // }
       .nav-sheet-container {
         display: none;
         position: absolute;
         left: 0;
-        top: 56px;
+        top: 50px;
+        padding-top: 5px;
         width: max-content;
         width: 100%;
         .nav-sheet-items {
