--- a/components/head/index.less
+++ b/components/head/index.less
@@ -44,6 +44,7 @@
         padding-top: 5px;
         width: max-content;
         width: 100%;
+        box-shadow: 0px 3px 6px 1px rgba(0, 0, 0, 0.08);
         .nav-sheet-items {
           border-radius: 4px;
           z-index: 100;
