fix: 优化顶部导航hover样式闪动和不流畅问题

--- a/components/head/index.less
+++ b/components/head/index.less
@@ -45,9 +45,11 @@
         width: max-content;
         width: 100%;
         box-shadow: 0px 3px 6px 1px rgba(0, 0, 0, 0.08);
+        background: white;
+        z-index: 100;
         .nav-sheet-items {
           border-radius: 4px;
-          z-index: 100;
+          z-index: 1000;
           .nav-sheet-item {
             line-height: 40px;
             height: 40px;
