--- a/components/head/index.less
+++ b/components/head/index.less
@@ -2,7 +2,7 @@
   position: sticky;
   top: 0;
   z-index: 100;
-  background: #FFE300;
+  background: #ffe300;
   height: 50px;
   padding: 0 260px;
   display: flex;
@@ -30,7 +30,7 @@
       line-height: 50px;
       &:hover {
         cursor: pointer;
-        color: #FFE300;
+        color: #ffe300;
         background: #282828;
         .nav-sheet-container {
           display: block !important;
@@ -47,18 +47,15 @@
         box-shadow: 0px 3px 6px 1px rgba(0, 0, 0, 0.08);
         background: white;
         z-index: 100;
-        .nav-sheet-items {
-          border-radius: 4px;
-          z-index: 1000;
-          .nav-sheet-item {
-            line-height: 40px;
-            height: 40px;
-            font-size: 14px;
-            color: #282828;
-            text-align: center;
-            &:hover {
-              background: #FFE300;
-            }
+        .nav-sheet-item {
+          line-height: 40px;
+          height: 40px;
+          font-size: 14px;
+          color: #282828;
+          text-align: center;
+          display: block;
+          &:hover {
+            background: #ffe300;
           }
         }
       }
