--- a/pages/index/index.less
+++ b/pages/index/index.less
@@ -14,6 +14,11 @@
       }
 
       .intro {
+        .h1 {
+          font-size: 80px;
+          font-weight: bold;
+          color: #E86024;
+        }
         .h2 {
           font-size: 26px;
           font-weight: 400;
