--- a/apps/m7s-website/.vitepress/theme/components/content/index.less
+++ b/apps/m7s-website/.vitepress/theme/components/content/index.less
@@ -48,11 +48,12 @@
             line-height: 58px;
           }
           &-content {
+            margin-top: 20px;
             height: 30px;
-            font-size: 22px;
+            font-size: 18px;
             font-weight: 500;
             color: #d8d8d8;
-            line-height: 58px;
+            line-height: 20px;
           }
         }
       }
@@ -208,6 +209,7 @@
         flex-wrap: wrap;
         justify-content: center;
         .plugin-item {
+          padding: 0 5px;
           border: 1px solid #d1e8f8;
           width: 45%;
           display: flex;
@@ -219,17 +221,18 @@
           }
           &-title {
             height: 37px;
-            font-size: 18x;
+            font-size: 20px;
             font-weight: 400;
             color: #ffffff;
-            line-height: 58px;
+            // line-height: 58px;
           }
           &-content {
+            margin-top: 10px;
             height: 30px;
-            font-size: 16px;
+            font-size: 14px;
             font-weight: 500;
             color: #d8d8d8;
-            line-height: 58px;
+            line-height: 20px;
           }
         }
       }
