--- a/apps/m7s-website/.vitepress/theme/components/head/index.less
+++ b/apps/m7s-website/.vitepress/theme/components/head/index.less
@@ -39,7 +39,7 @@
         &:hover {
           cursor: pointer;
           background: linear-gradient(270deg, #f96e1f 0%, #ffe300 100%);
-          color: #ffe300;
+          color: #fff;
           .nav-sheet-container {
             display: block !important;
           }
