--- a/apps/m7s-website/.vitepress/theme/components/content/index.less
+++ b/apps/m7s-website/.vitepress/theme/components/content/index.less
@@ -48,6 +48,7 @@
             line-height: 58px;
           }
           &-content {
+            padding: 0 15px;
             margin-top: 20px;
             height: 30px;
             font-size: 18px;
