feat: ui update

--- a/apps/m7s-website/.vitepress/theme/components/head/index.less
+++ b/apps/m7s-website/.vitepress/theme/components/head/index.less
@@ -36,6 +36,8 @@
         padding: 0 29px;
         position: relative;
         line-height: 60px;
+        min-width: 120px;
+        text-align: center;
         &:hover {
           cursor: pointer;
           background: linear-gradient(270deg, #f96e1f 0%, #ffe300 100%);
@@ -48,7 +50,7 @@
           display: none;
           position: absolute;
           left: 0;
-          top: px;
+          // top: px;
           padding-top: 5px;
           width: max-content;
           width: 100%;
