--- a/apps/m7s-website/.vitepress/theme/components/content/index.less
+++ b/apps/m7s-website/.vitepress/theme/components/content/index.less
@@ -87,27 +87,31 @@
           display: flex;
           justify-content: space-between;
           padding-bottom: 120px;
+          height: 448px;
+          box-sizing: content-box;
           .left {
             flex: 1;
             .feature-desc {
               .h1 {
+                // padding: 10px 0;
                 height: 52px;
                 font-size: 40px;
                 font-family: Microsoft YaHei-Regular, Microsoft YaHei;
                 font-weight: 400;
                 color: #ffffff;
-                line-height: 50px;
+                // line-height: 50px;
               }
               p {
-                height: 65px;
+                // height: 65px;
                 font-size: 20px;
                 font-family: Microsoft YaHei-Regular, Microsoft YaHei;
                 font-weight: 400;
                 color: #e5e7ea;
-                line-height: 30px;
+                line-height: 40px;
               }
             }
             .btn {
+              margin-top: 25px;
               cursor: pointer;
               border-radius: 34px;
               width: 248px;
@@ -176,6 +180,10 @@
                   color: #ee4433;
                 }
               }
+            }
+            .download-desc {
+              margin-top: 20px;
+              font-size: 20px;
             }
           }
         }
