feat: ui update

--- a/apps/m7s-website/.vitepress/theme/components/content/index.less
+++ b/apps/m7s-website/.vitepress/theme/components/content/index.less
@@ -287,13 +287,13 @@
          }
        }
        .m7s-item {
-         height: 250px;
-         margin-top: 30px;
-         display: flex;
-         padding: 0 10px 30px 10px;
+         height: 100%;
+        margin-top: 30px;
+        //  display: flex;
+        display: block;
+        padding: 0 10px 30px 10px;
          .left {
-          //  width: 40%;
-          flex: 3;
+          // flex: 3;
            .feature-desc {
              margin-top: 5px;
              .h1 {
@@ -310,7 +310,8 @@
              }
            }
            .btn {
-             margin-top: 20px;
+            //  position: relative;
+             margin: 20px 0;
              cursor: pointer;
              border-radius: 25px;
              width: 124px;
@@ -322,17 +323,23 @@
              color: #000000;
              line-height: 40px;
              text-align: center;
+            //  left: 50%;
+             margin-left: 50%;
+             transform: translateX(-50%);
            }
          }
          .right {
-           flex: 4;
+          //  float: right;
+          //  margin-top: -60px;
+          //  flex: 4;
            .role {
-             width: 220px;
-             height: 200px;
-             margin-top: -20px;
+            //  margin-top: -60px;
+             width: 100%;
+             height: 300px;
+            //  margin-top: -20px;
            }
            img {
-             height: 224px;
+             height: 448px;
              border-radius: 5px;
            }
            .download {
@@ -382,6 +389,10 @@
                }
              }
            }
+          .download-desc {
+            margin-top: -20px;
+            font-size: 16px;
+          }
          }
        }
      }
