--- a/apps/m7s-website/.vitepress/theme/components/content/index.less
+++ b/apps/m7s-website/.vitepress/theme/components/content/index.less
@@ -30,6 +30,7 @@
         display: flex;
         flex-wrap: wrap;
         .plugin-item {
+          cursor: pointer;
           border: 1px solid #d1e8f8;
           width: 300px;
           height: 233px;
