--- a/apps/m7s-website/.vitepress/theme/components/head/index.less
+++ b/apps/m7s-website/.vitepress/theme/components/head/index.less
@@ -22,6 +22,7 @@
       display: flex;
       align-items: center;
       .logo {
+        margin-left: 10px;
         font-size: 30px;
       }
       img {
