--- a/apps/m7s-website/.vitepress/theme/components/banner/index.less
+++ b/apps/m7s-website/.vitepress/theme/components/banner/index.less
@@ -35,7 +35,9 @@
       .item-3 {
         margin-top: 36px;
         width: 506px;
-        height: 40px;
+        height: 90px;
+        overflow-x: visible;
+        overflow-y: clip;
         font-size: 26px;
         font-family: Microsoft YaHei-Regular, Microsoft YaHei;
         font-weight: 400;
