修复移动端首页CSS显示

--- a/apps/m7s-website/.vitepress/theme/components/banner/index.less
+++ b/apps/m7s-website/.vitepress/theme/components/banner/index.less
@@ -105,6 +105,8 @@
           font-weight: 400;
           color: #ffffff;
           line-height: 1.5;
+          overflow-x: visible;
+          overflow-y: clip;
           span {
             color: #ffe300;
           }
