--- a/apps/m7s-website/.vitepress/theme/components/banner/index.less
+++ b/apps/m7s-website/.vitepress/theme/components/banner/index.less
@@ -63,7 +63,7 @@
     }
     .right {
       width: 50%;
-      background: url(/images/m7s/go-m7s.png) no-repeat;
+      background: url(/svg/banner2.svg) no-repeat;
       background-size: contain;
     }
   }
@@ -127,7 +127,7 @@
       }
       .right {
         width: 50%;
-        background: url(/images/m7s/go-m7s.png) no-repeat;
+        background: url(/svg/banner2.svg) no-repeat;
         background-size: contain;
       }
     }
