--- a/apps/m7s-website/.vitepress/theme/components/banner/index.less
+++ b/apps/m7s-website/.vitepress/theme/components/banner/index.less
@@ -13,6 +13,9 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
+      .flex {
+        display: flex;
+      }
       .item-1 {
         width: 347px;
         height: 74px;
