🐛 FIX: 移动端适配

--- a/apps/m7s-website/.vitepress/theme/components/banner/index.less
+++ b/apps/m7s-website/.vitepress/theme/components/banner/index.less
@@ -66,8 +66,8 @@
     }
     .right {
       width: 50%;
-      background: url(/svg/banner2.svg) no-repeat;
-      background-size: contain;
+      // background: url(/svg/banner2.svg) no-repeat;
+      // background-size: contain;
     }
   }
 }
@@ -130,8 +130,9 @@
       }
       .right {
         width: 50%;
-        background: url(/svg/banner2.svg) no-repeat;
-        background-size: contain;
+        margin-top: 100px;
+        // background: url(/svg/banner2.svg) no-repeat;
+        // background-size: contain;
       }
     }
   }
