减少横向滚动条

--- a/apps/m7s-website/.vitepress/theme/components/banner/index.less
+++ b/apps/m7s-website/.vitepress/theme/components/banner/index.less
@@ -37,10 +37,10 @@
       }
       .item-3 {
         margin-top: 36px;
-        width: 506px;
+        width: 200px;
         height: 30px;
-        overflow-x: visible;
-        overflow-y: clip;
+        overflow-x: hidden;
+        overflow-y: hidden;
         font-size: 26px;
         font-family: Microsoft YaHei-Regular, Microsoft YaHei;
         font-weight: 400;
@@ -101,15 +101,14 @@
           line-height: 1.5;
         }
         .item-3 {
-          height: 100%;
           margin-top: 10px;
           height: 40px;
           font-size: 14px;
           font-weight: 400;
           color: #ffffff;
           line-height: 1;
-          overflow-x: visible;
-          overflow-y: clip;
+          overflow-x: hidden;
+          overflow-y: hidden;
           span {
             color: #ffe300;
           }
